add feature to stop hdfs traversal at certain depth